Added custom 404 page to web.config

--- a/Web Application HTML5/Web.config
+++ b/Web Application HTML5/Web.config
@@ -7,5 +7,8 @@
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
+    <customErrors mode="On">
+      <error statusCode="404" redirect="~/404.aspx" />
+    </customErrors>
   </system.web>
 </configuration>
