Override X-Powered-By
Adds security they say!

--- a/Web Application HTML5/Web.config
+++ b/Web Application HTML5/Web.config
@@ -11,4 +11,13 @@
       <error statusCode="404" redirect="~/404.aspx" />
     </customErrors>
   </system.web>
+  <system.webServer>
+    <httpProtocol>
+      <customHeaders>
+        <!-- A little extra security (by obscurity), removings fun but adding your own is better -->
+        <remove name="X-Powered-By" />
+        <add name="X-Powered-By" value="My Little Pony" />
+      </customHeaders>
+    </httpProtocol>
+  </system.webServer>
 </configuration>
