Upgrade to h5bp v5.0.0

--- a/Web Application HTML5/Web_Application_HTML5.csproj
+++ b/Web Application HTML5/Web_Application_HTML5.csproj
@@ -57,6 +57,7 @@
     <Reference Include="System.EnterpriseServices" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include=".editorconfig" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -67,17 +68,21 @@
   <ItemGroup>
     <Content Include="404.aspx" />
     <Content Include="apple-touch-icon-precomposed.png" />
+    <Content Include="apple-touch-icon.png" />
+    <Content Include="browserconfig.xml" />
     <Content Include="css\main.css" />
     <Content Include="css\normalize.css" />
-    <Content Include="css\normalize.min.css" />
     <Content Include="Default.aspx" />
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
     <Content Include="humans.txt" />
     <Content Include="js\main.js" />
+    <Content Include="js\plugins.js" />
     <Content Include="js\vendor\jquery-1.11.1.min.js" />
     <Content Include="robots.txt" />
     <Content Include="sw-file-icon.png" />
+    <Content Include="tile-wide.png" />
+    <Content Include="tile.png" />
     <Content Include="Web.config" />
     <Content Include="_Definitions\_project.vstemplate.xml" />
     <Content Include="_preprocess.xml" />
