Add 404 custom page

--- a/Web Application HTML5/Web.config
+++ b/Web Application HTML5/Web.config
@@ -9,6 +9,10 @@
 
         <!-- Security through obscurity, removes  X-AspNet-Version HTTP header from the response -->
         <httpRuntime targetFramework="4.5" enableVersionHeader="false" />
+
+        <customErrors mode="RemoteOnly">
+            <error statusCode="404" redirect="~/404.aspx" />
+        </customErrors>
     </system.web>
     <system.webServer>
         <httpProtocol>
