Add more security through obscurity

--- a/Web Application HTML5/Web.config
+++ b/Web Application HTML5/Web.config
@@ -34,6 +34,8 @@
                 <!-- A little extra security (by obscurity), removings fun but adding your own is better -->
                 <remove name="X-Powered-By" />
                 <add name="X-Powered-By" value="My Little Pony" />
+                <remove name="Server"/>
+                <add name="Server" value="Hungry Hamsters"/>
 
                 <!--
                 With Content Security Policy (CSP) enabled (and a browser that supports it (http://caniuse.com/#feat=contentsecuritypolicy),
