[SECURITY]: Click jacking prevention

--- a/Web Application HTML5/Web.config
+++ b/Web Application HTML5/Web.config
@@ -64,6 +64,9 @@
                     Use ChromeFrame if it's installed for a better experience for the poor IE folk
                     -->
                 <add name="X-UA-Compatible" value="IE=Edge,chrome=1" />
+
+                <!-- Prevent app to be loaded inside a iframe -->
+                <add name="X-Frame-Options" value="DENY" />
             </customHeaders>
         </httpProtocol>
 
